...
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ambient_sound_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/ambientSoundMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
...
                    android:id="@+id/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/transparency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transparency" />

                <RadioButton
                    android:id="@+id/noiseCanceling"
...
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noise_canceling_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioGroup
                android:id="@+id/noiseCancelingMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
...
                    android:id="@+id/indoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/indoor" />

                <RadioButton
                    android:id="@+id/outdoor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outdoor" />
            </RadioGroup>

        </LinearLayout>
...
